// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/BucketIcon class names should apply \`\` className if src is set 1`] = `
<img
  alt="Custom className"
  class="makeStyles-root-4 C A"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon class names should apply \`stub\` className if no src 1`] = `
<img
  alt="Stub className"
  class="makeStyles-root-5 S A"
  src="IMAGE_MOCK"
/>
`;

exports[`components/BucketIcon class names should apply className 1`] = `
<img
  alt="Set className"
  class="makeStyles-root-3 A"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon should render custom src 1`] = `
<img
  alt="Custom src"
  class="makeStyles-root-2"
  src="https://custom-src"
/>
`;

exports[`components/BucketIcon should render default when no src 1`] = `
<img
  alt="No src"
  class="makeStyles-root-1"
  src="IMAGE_MOCK"
/>
`;
